fixed some fails